# makegen

./: Cargo.toml  LICENSE  Makefile  README.md
src/: filesystem.rs  fs.rs  generator.rs  main.rs  phony.rs  task.rs  utils.rs
src/constants/: mod.rs
src/interactive/: mod.rs  path_prompt.rs  phony_prompt.rs  task_prompt.rs  welcome_log.rs
src/utils/: logger.rs  mod.rs
